fix flex bug on safari by reducing margin between boxes

--- a/SMAKK/sass/_structures.scss
+++ b/SMAKK/sass/_structures.scss
@@ -87,7 +87,7 @@
     }
     .r-cards--spaced & {
       @include smakk-box-shadow();
-      margin: 10px;
+      margin: 10px 0;
       max-width: calc(50% - 20px);
       #certification & {
         min-height: 200px;
